--- a/README
+++ b/README
@@ -1,1 +1,12 @@
 Run script/catal_server.pl to test the application.
+
+研修スケジュール
+
+2015
+09-02 環境構築
+09-03 Chapter2 Catalystの基本
+      Chapter3 コンテキストオブジェクト
+09-04 Chapter4 ビュー開発
+09-05
+09-06 Chapter5 モデル開発
+09-07 Chapter6 コントローラ開発
